{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 379,
  "lineage": "b4fc4ddd-9b24-527d-d373-ab5e959155d3",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2024-01-06T08:19:49.885-08:00",
            "enable_cdn": false,
            "fingerprint": "woCQtBa3crU=",
            "generated_id": 6645864858886914890,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/ml-demo-384110/global/httpHealthChecks/http-health-check-messages"
            ],
            "id": "projects/ml-demo-384110/global/backendServices/backend-service-messages",
            "load_balancing_scheme": "EXTERNAL",
            "name": "backend-service-messages",
            "port_name": "http",
            "project": "ml-demo-384110",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ml-demo-384110/global/backendServices/backend-service-messages",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_http_health_check.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.107.156.102",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-01-06T08:19:30.585-08:00",
            "id": "projects/ml-demo-384110/global/addresses/frontend-ip-message",
            "name": "frontend-ip-message",
            "prefix_length": 0,
            "project": "ml-demo-384110",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ml-demo-384110/global/addresses/frontend-ip-message"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/ml-demo-384110/global/forwardingRules/http-lb-forwarding-rule-message",
            "ip_address": "34.107.156.102",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "http-lb-forwarding-rule-message",
            "port_range": "80-80",
            "project": "ml-demo-384110",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ml-demo-384110/global/forwardingRules/http-lb-forwarding-rule-message",
            "target": "https://www.googleapis.com/compute/v1/projects/ml-demo-384110/global/targetHttpProxies/http-lb-proxy-message"
          },
          "dependencies": [
            "google_compute_backend_bucket.default",
            "google_compute_global_address.default",
            "google_compute_target_http_proxy.default",
            "google_compute_url_map.default-http",
            "google_storage_bucket.default",
            "random_id.bucket_prefix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/ml-demo-384110/global/forwardingRules/http-lb-forwarding-rule-https-message",
            "ip_address": "34.107.156.102",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "http-lb-forwarding-rule-https-message",
            "port_range": "443-443",
            "project": "ml-demo-384110",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ml-demo-384110/global/forwardingRules/http-lb-forwarding-rule-https-message",
            "target": "https://www.googleapis.com/compute/v1/projects/ml-demo-384110/global/targetHttpsProxies/https-lb-proxy-message"
          },
          "dependencies": [
            "google_compute_backend_bucket.default",
            "google_compute_global_address.default",
            "google_compute_managed_ssl_certificate.default",
            "google_compute_target_https_proxy.default",
            "google_compute_url_map.default-http",
            "google_storage_bucket.default",
            "random_id.bucket_prefix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-01-06T08:20:15.871-08:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/ml-demo-384110/global/targetHttpProxies/http-lb-proxy-message",
            "name": "http-lb-proxy-message",
            "project": "ml-demo-384110",
            "proxy_bind": false,
            "proxy_id": 1490989108149142352,
            "self_link": "https://www.googleapis.com/compute/v1/projects/ml-demo-384110/global/targetHttpProxies/http-lb-proxy-message",
            "url_map": "https://www.googleapis.com/compute/v1/projects/ml-demo-384110/global/urlMaps/http-lb-message"
          },
          "dependencies": [
            "google_compute_backend_bucket.default",
            "google_compute_url_map.default-http",
            "google_storage_bucket.default",
            "random_id.bucket_prefix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-01-06T08:20:15.868-08:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/ml-demo-384110/global/targetHttpsProxies/https-lb-proxy-message",
            "name": "https-lb-proxy-message",
            "project": "ml-demo-384110",
            "proxy_bind": false,
            "proxy_id": 2861410844706915152,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ml-demo-384110/global/targetHttpsProxies/https-lb-proxy-message",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/ml-demo-384110/global/sslCertificates/cert-messages"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/ml-demo-384110/global/urlMaps/http-lb-message"
          },
          "dependencies": [
            "google_compute_backend_bucket.default",
            "google_compute_managed_ssl_certificate.default",
            "google_compute_url_map.default-http",
            "google_storage_bucket.default",
            "random_id.bucket_prefix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "default2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-01-06T08:20:15.882-08:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/ml-demo-384110/global/targetHttpsProxies/test-proxy2-message",
            "name": "test-proxy2-message",
            "project": "ml-demo-384110",
            "proxy_bind": false,
            "proxy_id": 1183708812577915728,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ml-demo-384110/global/targetHttpsProxies/test-proxy2-message",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/ml-demo-384110/global/sslCertificates/cert-messages"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/ml-demo-384110/global/urlMaps/http-lb-message"
          },
          "dependencies": [
            "google_compute_backend_bucket.default",
            "google_compute_managed_ssl_certificate.default",
            "google_compute_url_map.default-http",
            "google_storage_bucket.default",
            "random_id.bucket_prefix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-01-06T08:20:21.974-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/ml-demo-384110/global/backendServices/backend-service-messages",
            "default_url_redirect": [],
            "description": "a description",
            "fingerprint": "GUs9tpggNI0=",
            "header_action": [],
            "host_rule": [
              {
                "description": "",
                "hosts": [
                  "message.lab-demo.cloud"
                ],
                "path_matcher": "allpaths"
              }
            ],
            "id": "projects/ml-demo-384110/global/urlMaps/url-map-messages",
            "map_id": 7440418591577785130,
            "name": "url-map-messages",
            "path_matcher": [
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/ml-demo-384110/global/backendServices/backend-service-messages",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "allpaths",
                "path_rule": [],
                "route_rules": []
              }
            ],
            "project": "ml-demo-384110",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ml-demo-384110/global/urlMaps/url-map-messages",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_http_health_check.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-01-06T08:20:04.389-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/ml-demo-384110/global/backendBuckets/media-backend-bucket-messages",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "gwW0syE9Af8=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/ml-demo-384110/global/urlMaps/http-lb-message",
            "map_id": 7882266053688214363,
            "name": "http-lb-message",
            "path_matcher": [],
            "project": "ml-demo-384110",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ml-demo-384110/global/urlMaps/http-lb-message",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_bucket.default",
            "google_storage_bucket.default",
            "random_id.bucket_prefix"
          ]
        }
      ]
    }
  ]
}